# python-auth-api-microservice

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  oauth2.py  schemas.py
app/core/: config.py
app/db/: database.py
app/routers/: auth.py
config/: tempo.yaml
scripts/: mongo-init.js
