[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dale-Kurt Murray <hello@dalekurtmurray.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pymongo = "^4.3.3"
bcrypt = "^4.0.1"
fastapi-jwt-auth = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
